--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/node": "^25.0.9",
+    "@typescript-eslint/eslint-plugin": "^8.53.1",
+    "@typescript-eslint/parser": "^8.53.1",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "globals": "^17.0.0",
     "jsdom": "^27.4.0",
+    "typescript": "^5.9.3",
     "vite": "^5.0.12",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.17",
+    "vue-tsc": "^3.2.2"
   }
 }
