--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "uuid": "^13.0.0",
     "vue": "^3.4.15"
   },
   "devDependencies": {
@@ -20,12 +21,14 @@
     "@typescript-eslint/eslint-plugin": "^8.53.1",
     "@typescript-eslint/parser": "^8.53.1",
     "@vitejs/plugin-vue": "^5.0.3",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "globals": "^17.0.0",
     "jsdom": "^27.4.0",
     "typescript": "^5.9.3",
+    "typescript-eslint": "^8.53.1",
     "vite": "^5.0.12",
     "vitest": "^4.0.17",
     "vue-tsc": "^3.2.2"
