--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint .",
-    "verify": "npm run lint && npm test && npm run build"
+    "verify": "npm run lint && npm test && npm run build",
+    "predeploy": "npm run verify",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "uuid": "^13.0.0",
@@ -26,6 +28,7 @@
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
+    "gh-pages": "^6.3.0",
     "globals": "^17.0.0",
     "jsdom": "^27.4.0",
     "typescript": "^5.9.3",
